golden/error/_import_cycle_c.rcl
// TODO: Make relative imports work.
import "golden/error/_import_cycle_a.rcl"
